FIX: overflow

--- a/src/assets/styles/content.css
+++ b/src/assets/styles/content.css
@@ -11,3 +11,9 @@
 		}
 	}
 }
+
+.scroll-x {
+	td:has(code) + td {
+		min-inline-size: 20ch;
+	}
+}
